Fix image sizing styles

--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -4,22 +4,13 @@
 
 
 
-{% block pageBody %} 
-<div 
-class="mx-auto my-5 d-flex border"
-style="width:calc(min(80vh, 80vw));"
->
-    <img src="{{mask_load_path}}" alt="" 
-    class="mx-1 border" 
-    style="flex: 1 1 auto"
-    >
+{% block pageBody %}
 
-    <img src="{{input_load_path}}" alt="" 
-    class="mx-1 border "  
-    style="flex: 1 1 auto"
-    >
+<div class="mx-auto my-5 flex" style="width:calc(900px); display: flex">
 
+    <img src="{{mask_load_path}}" alt="" class="mx-1 border" style="width: 400px">
+    <img src="{{input_load_path}}" alt="" class="mx-1 border " style="width: 400px">
 
 </div>
-    
+
 {% endblock %}
